feat: building user page

--- a/src/assets/uni.css
+++ b/src/assets/uni.css
@@ -60,11 +60,11 @@ form {
 }
 
 /* page */
-.uni-page-head{
+.common-page-head{
 	padding:35rpx;
 	text-align: center;
 }
-.uni-page-head-title {
+.common-page-head-title {
 	display: inline-block;
 	padding: 0 40rpx;
 	font-size: 30rpx;
@@ -74,12 +74,7 @@ form {
 	box-sizing: border-box;
 	border-bottom: 2rpx solid #D8D8D8;
 }
-.uni-page-body {
-	width: 100%;
-	padding:0 100px;
-	flex-grow: 1;
-	/* overflow-x: hidden; */
-}
+
 .uni-padding-wrap{
 	/* width:690rpx; */
 	padding:0 30rpx;
